--- a/index.html
+++ b/index.html
@@ -4,11 +4,54 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resynthesizer</title>
+
+  <title>Studie ontwijkend gedrag</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7253077123762970" crossorigin="anonymous"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9XVPTE8BST"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9XVPTE8BST');
+  </script>
+
+  <style>
+    html {
+      padding: 0;
+      margin: 0;
+      height: 100vh;
+      width: 100%;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    body {
+      margin: 0;
+      display: flex;
+      padding: 20px;
+      height: 100vh;
+      width: 100%;
+      box-sizing: border-box;
+      align-items: center;
+      justify-content: center;
+    }
+
+    h1 {
+      font-size: 40px;
+      color: white;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <button id="start-button">Start</button>
-
+  <h1>Press space to start</h1>
   <script src="/app.js"></script>
 </body>
 </html>
